--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
+<!--
+  ~ Copyright (c) Traksity 2019.
+  ~ Written by beratalp
+  -->
+
 <resources>
     <string name="app_name">Bilkent SRS</string>
     <string name="id">Bilkent ID</string>
@@ -9,4 +14,6 @@
     <string name="no_internet_connection">There is no internet connection.</string>
     <string name="ok">OK</string>
     <string name="wrong_id_or_password">Wrong password or Bilkent ID number.</string>
+    <string name="enter_sms">Please enter the verification code sent from Bilkent.</string>
+    <string name="no_verification_entered">Please enter a verification code.</string>
 </resources>
